# Lab6_homework

./: CMakeLists.txt  CPackConfig.cmake
.github/workflows/: github-actions.yml
